# vtrng

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  MANIFEST.in  Makefile  README.md  SECURITY.md  out.hex  pyproject.toml  requirements1.txt  setup.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  weekly_certification.yml
docs/: api_reference.md  applications.md  certification.md  faq.md  for_students.md  how_it_works.md  index.md  quickstart.md  visualization.md  vm_and_containers.md
scripts/: run_dieharder.sh  run_ent.sh  run_testu01.sh
src/vtrng/: __init__.py  __main__.py  _compat.py  _fast.c  collector.py  conditioning.py  export.py  generator.py  health.py  nist.py  pool.py  py.typed  seedfile.py  sources.py  sp800_22.py  testrunner.py
tests/: test_basic.py  test_nist.py  test_sp800_22.py
