[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtrng"
version = "0.5.0"
description = "Very True Random Number Generator, pure-software TRNG from CPU jitter physics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "VTRNG Contributors"}
]
keywords = [
    "random", "trng", "rng", "entropy", "jitter",
    "cryptography", "security", "nist", "randomness",
    "true-random", "cpu-jitter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Typing :: Typed",
]

[project.optional-dependencies]
fast = []  # C extension is built automatically if compiler available
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/vtrng/vtrng"
Documentation = "https://github.com/vtrng/vtrng/tree/main/docs"
Repository = "https://github.com/vtrng/vtrng"
Issues = "https://github.com/vtrng/vtrng/issues"
Changelog = "https://github.com/vtrng/vtrng/blob/main/CHANGELOG.md"

[project.scripts]
vtrng = "vtrng.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vtrng = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120